--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/teaco-icon-white.png" />
+    <link rel="icon" type="image/svg+xml" href="/teaco-icon-blue.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Teaco</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap">
